[tool.poetry]
name = "shp-learning"
version = "0.1.0"
description = "python shape learning repository"
authors = ["granfass <74089629+granfass@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyshp = "^2.1.2"
flake8 = "^3.8.4"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
